--- a/tests/BloodPressure.UnitTests/BloodPressure.UnitTests.csproj
+++ b/tests/BloodPressure.UnitTests/BloodPressure.UnitTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\BloodPressure.Application\BloodPressure.Application.csproj" />
+    <ProjectReference Include="..\..\src\BloodPressure.Application\BloodPressure.Application.csproj" />
   </ItemGroup>
 
 </Project>
